# IMU_Array

./: LICENSE  README.md
FPGACode/: run_testbench.sh  spi_slave.v  spi_testbench.v  top.pcf  top.v
IMUArray_BreakoutBoard/: IMUArray_BreakoutBoard.kicad_pcb  IMUArray_BreakoutBoard.kicad_pro  IMUArray_BreakoutBoard.kicad_sch
IMUArray_BreakoutBoard/Gerber/: IMUArray_BreakoutBoard-B_Cu.gbr  IMUArray_BreakoutBoard-B_Mask.gbr  IMUArray_BreakoutBoard-B_Paste.gbr  IMUArray_BreakoutBoard-B_Silkscreen.gbr  IMUArray_BreakoutBoard-Edge_Cuts.gbr  (+9 more)
IMUArray_ProcessingBoard/: README.md
IMUArray_ProcessingBoard/Code/imu_main/: CMakeLists.txt  config.h  gpsdo.c  gpsdo.h  hardware_pins.h  imu_cal.h  imu_fifo.c  imu_fifo.h  imu_main.c  imu_processing.c  imu_processing.h  inputCapture.pio.h  lwipopts.h  main,.c  main_bitmap.bin.h  ntp_sync.c  ntp_sync.h  tcp_server.c  tcp_server.h  time_sync.h
IMUArray_ProcessingBoard/Code/imu_main/tinygps/: tinygps.c  tinygps.h
IMUArray_ProcessingBoard/Code/imu_simple/: CMakeLists.txt  ICM42688.h  imu_simple.c  inputCapture.pio.h
IMUArray_SensorBoard/: BOM_JLCSMT.xlsx  BOM_PCBWay.xlsx  CPL_JLCSMT.xlsx  Centroid_AccArray_QFN.kicad_pcb.xls  IMUArray_SensorBoard.kicad_pro  IMUArray_SensorBoard.kicad_sch
Matlab/: allan.m  calculateADEV.asv  calculateADEV.m  readSerial.asv  readSerial.m
Matlab_calibration/: Calibration_main.m  MIMU_calib_param_est.m  costFunctionArray.m  costFunctionArrayInternalMisalignment.m  generateCalibrationHeader.m  gravity.m  readCSV.m  reorderData.m
MicroPythonCode/: ICM42688P.py  main.py  oakdevtech_icepython.py
(+78 files in other folders)
